<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.torproject.android.ui.v3onionservice.OnionServiceActivity"
    tools:showIn="@layout/activity_hosted_services">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="?dialogPreferredPadding">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_type" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioUserServices"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/user_services" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioAppServices"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/app_services" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/onion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
