<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/handle"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:textColor="@android:color/white"
        android:text="@string/kindess_config_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/tvCustomBridgeSubHeader"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowKindnessConfigWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomBridgeSubHeader"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/panel_widget_background"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/option_only_on_wifi"
            android:textSize="24sp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"

            />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swKindnessConfigWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:showText="false"
            android:textSize="24sp"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowKindnessConfigPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowKindnessConfigWifi"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/panel_widget_background"
        android:layout_margin="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/option_only_when_charging"
            android:textSize="24sp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"

            />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swKindnessConfigCharging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:showText="false"
            android:textSize="24sp"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@android:string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:backgroundTint="@color/orbot_btn_enabled_purple"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_shape_round"
        android:paddingLeft="@dimen/button_horizontal_large_margin"
        android:paddingRight="@dimen/button_horizontal_large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toBottomOf="@id/mainGuideline"
        app:layout_goneMarginBottom="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>